// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<OtherLoanAmountField /> input field with custom validation 1`] = `
<div>
  <form
    action="#"
    class="sc-fujyUd bFqltC"
    id="testForm"
  >
    <input
      class="sc-iCoHVE gEjxKq"
      form="[object Object]"
    />
    <div
      class="sc-iqAbSa VlpJw"
    >
      <div
        class="sc-lmgQde iscgnI"
      >
        <input
          class="sc-fnVYJo lhlOBk"
          id="otherLoanAmountField"
          name="name"
          placeholder="Kwota obecnych zobowiązań finansowych"
          type="text"
          value="test"
        />
        <span
          class="sc-kfYqjs dOuUvb"
        >
          PLN
        </span>
      </div>
      <span
        class="sc-hBMVcZ kROtfw"
      >
        Podany kwota jest nieprawidłowa
      </span>
    </div>
  </form>
</div>
`;

exports[`<OtherLoanAmountField /> matches snapshot 1`] = `
<input
  class="sc-fnVYJo crKgBR"
  id="otherLoanAmountField"
  name="name"
  placeholder="Kwota obecnych zobowiązań finansowych"
  type="text"
  value=""
/>
`;

exports[`<OtherLoanAmountField /> matches snapshot with error 1`] = `
<div>
  <form
    action="#"
    class="sc-fujyUd bFqltC"
    id="testForm"
  >
    <input
      class="sc-iCoHVE gEjxKq"
      form="[object Object]"
    />
    <div
      class="sc-iqAbSa VlpJw"
    >
      <label
        for="name"
      >
        Test*
      </label>
      <div
        class="sc-lmgQde iscgnI"
      >
        <input
          class="sc-fnVYJo lhlOBk"
          id="otherLoanAmountField"
          label="Test"
          name="name"
          placeholder="Kwota obecnych zobowiązań finansowych*"
          required=""
          type="text"
          value=""
        />
        <span
          class="sc-kfYqjs dOuUvb"
        >
          PLN
        </span>
      </div>
      <span
        class="sc-hBMVcZ kROtfw"
      >
        To pole jest wymagane
      </span>
    </div>
  </form>
</div>
`;

exports[`<OtherLoanAmountField /> matches snapshot with label 1`] = `
<div>
  <form
    action="#"
    class="sc-fujyUd bFqltC"
    id="testForm"
  >
    <input
      class="sc-iCoHVE gEjxKq"
      form="[object Object]"
    />
    <div
      class="sc-iqAbSa VlpJw"
    >
      <label
        for="name"
      >
        Test
      </label>
      <div
        class="sc-lmgQde iscgnI"
      >
        <input
          class="sc-fnVYJo crKgBR"
          id="otherLoanAmountField"
          label="Test"
          name="name"
          placeholder="Kwota obecnych zobowiązań finansowych"
          type="text"
          value=""
        />
        <span
          class="sc-kfYqjs dOuUvb"
        >
          PLN
        </span>
      </div>
    </div>
  </form>
</div>
`;
